@@ -1,6 +1,6 @@
 /*
-  Copyright (c) 2008 Gordon Gremme <gremme@zbh.uni-hamburg.de>
-  Copyright (c) 2008 Center for Bioinformatics, University of Hamburg
+  Copyright (c) 2008-2010 Gordon Gremme <gremme@zbh.uni-hamburg.de>
+  Copyright (c) 2008      Center for Bioinformatics, University of Hamburg
 
   Permission to use, copy, modify, and distribute this software for any
   purpose with or without fee is hereby granted, provided that the above
@@ -19,31 +19,38 @@
 #include "core/bioseq_iterator.h"
 #include "core/fasta.h"
 #include "core/ma.h"
+#include "core/outputfile.h"
 #include "core/option.h"
 #include "core/undef.h"
 #include "tools/gt_seqfilter.h"
 
 typedef struct {
   unsigned long minlength,
-                maxlength;
-} GtSeqFilterArguments;
+                maxlength,
+                width;
+  GtOutputFileInfo *ofi;
+  GtFile *outfp;
+} SeqFilterArguments;
 
 static void* gt_seqfilter_arguments_new(void)
 {
-  GtSeqFilterArguments *arguments = gt_calloc(1, sizeof *arguments);
+  SeqFilterArguments *arguments = gt_calloc(1, sizeof *arguments);
+  arguments->ofi = gt_outputfileinfo_new();
   return arguments;
 }
 
 static void gt_seqfilter_arguments_delete(void *tool_arguments)
 {
-  GtSeqFilterArguments *arguments = tool_arguments;
+  SeqFilterArguments *arguments = tool_arguments;
   if (!arguments) return;
+  gt_file_delete(arguments->outfp);
+  gt_outputfileinfo_delete(arguments->ofi);
   gt_free(arguments);
 }
 
 static GtOptionParser* gt_seqfilter_option_parser_new(void *tool_arguments)
 {
-  GtSeqFilterArguments *arguments = tool_arguments;
+  SeqFilterArguments *arguments = tool_arguments;
   GtOption *option;
   GtOptionParser *op;
   gt_assert(arguments);
@@ -65,13 +72,19 @@ static GtOptionParser* gt_seqfilter_option_parser_new(void *tool_arguments)
                             GT_UNDEF_ULONG);
   gt_option_parser_add_option(op, option);
 
+  /* -width */
+  option = gt_option_new_width(&arguments->width);
+  gt_option_parser_add_option(op, option);
+
+  gt_outputfile_register_options(op, &arguments->outfp, arguments->ofi);
+
   return op;
 }
 
 static int gt_seqfilter_runner(int argc, const char **argv, int parsed_args,
                                void *tool_arguments, GtError *err)
 {
-  GtSeqFilterArguments *arguments = tool_arguments;
+  SeqFilterArguments *arguments = tool_arguments;
   GtBioseqIterator *bsi;
   GtBioseq *bioseq;
   unsigned long i;
@@ -91,7 +104,8 @@ static int gt_seqfilter_runner(int argc, const char **argv, int parsed_args,
            gt_bioseq_get_sequence_length(bioseq, i) <= arguments->maxlength)) {
         gt_fasta_show_entry(gt_bioseq_get_description(bioseq, i),
                             gt_bioseq_get_sequence(bioseq, i),
-                            gt_bioseq_get_sequence_length(bioseq, i), 0, NULL);
+                            gt_bioseq_get_sequence_length(bioseq, i),
+                            arguments->width, arguments->outfp);
       }
       else
         duplicates++;
@@ -115,8 +129,8 @@ static int gt_seqfilter_runner(int argc, const char **argv, int parsed_args,
 GtTool* gt_seqfilter(void)
 {
   return gt_tool_new(gt_seqfilter_arguments_new,
-                  gt_seqfilter_arguments_delete,
-                  gt_seqfilter_option_parser_new,
-                  NULL,
-                  gt_seqfilter_runner);
+                     gt_seqfilter_arguments_delete,
+                     gt_seqfilter_option_parser_new,
+                     NULL,
+                     gt_seqfilter_runner);
 }
